@@ -22,7 +22,7 @@
 
 <p>This is a guide to installation and administration for R.
 
-   <p>The current version of this document is 2.0.0 (2004-04-17).
+   <p>The current version of this document is 2.0.0 (2004-04-18).
 
    ISBN 3-900051-02-X
 
