@@ -1094,7 +1094,10 @@ SEXP do_typecvt(SEXP call, SEXP op, SEXP args, SEXP env)
     
     if (!done) {
 	if (asIs) {
-	    PROTECT(rval = cvec); /* just to balance */
+	    PROTECT(rval = duplicate(cvec)); 
+	    for (i = 0; i < len; i++)
+		if(isNAstring(CHAR(STRING_ELT(rval, i)), 1, &data))
+		    SET_STRING_ELT(rval, i, NA_STRING);
 	}
 	else {
 	    PROTECT(rval = allocVector(INTSXP, len));
